# skillq

./: .env.example  .gitignore  CHANGELOG.md  GITHUB_ISSUES.md  README.md  SKILLQ_CONTEXT_SNAPSHOT_2026-06-25.md  SKILLQ_RUN_RESULTS_2026-06-25.md  bug_to_fix.md  pyproject.toml
doc/: GAIA_EXPERIMENT_RESULTS.md  GAIA_FULL_RESULTS.md  L4_EDIT_AUDIT_REPORT.md  SKILLQ_RUN_RESULTS_2026-06-25.md  bug_to_fix.md  experiment_final_summary.md  experiment_r1_r2_report.md  experiment_summary_for_paper.md  l3l4_gap_1_extract_batch_name_collision.md  l3l4_gap_2_knowledge_to_extract_empty.md  l3l4_gap_3_fail_env_issue_misroute.md  l3l4_gap_4_extract_every_n_trials_1.md  l3l4_gap_5_skill_extractor_model_missing.md  l3l4_gap_index.md  main.pdf_modification_notes.md  prompt.md  tb2_fromscratch_bugs.md  tb2_fromscratch_report.md
doc/analysis/: step_9b_circuit_fibsqrt_root_cause.md
doc/figures/: plot_experiments.py
doc/old/: GITHUB_ISSUES.pre-refactor.md  SKILLQ_CONTEXT_SNAPSHOT.pre-refactor.md  SKILLQ_RUN_RESULTS_2026-06-25.md  bug_to_fix.pre-refactor.md  prompt.pre-refactor.md
docker/: Dockerfile.claude
experiments/: RUNNING.md  __init__.py  ablation.py  beta_sweep.py  kappa_sweep.py  run_benchmark.py  run_terminalbench.py
experiments/configs/: _post_run_cleanup.sh  gaia_skillq.yaml  method_tb2_skillq_e2e_3task_v3.yaml  method_tb2_skillq_fresh_start.yaml  method_tb2_skillq_full.yaml  method_tb2_skillq_full_v3.yaml  method_tb2_skillq_miniflight.yaml  method_tb2_skillq_seedverify.yaml  method_tb2_skillq_smoke_v3.yaml  prebuild_gaia_claude.yaml  prebuild_tb2_claude.yaml  run_tb2_e2e.sh  run_tb2_full.sh  run_tb2_small10.sh  run_tb2_small10_v2.sh  run_tb2_smoke_converted.sh  swebenchpro_paper.yaml  swebenchpro_skillq.yaml  tb2_bm25_5tasks.yaml  tb2_hard6.yaml  tb2_paper.yaml  tb2_skillq.yaml  tb2_skillq_e2e.yaml  tb2_skillq_e2e_3task_v3.yaml  tb2_skillq_empty_lib_smoke.yaml  tb2_skillq_fromscratch.yaml  tb2_skillq_fromscratch_r2.yaml  tb2_skillq_fromscratch_r3.yaml  tb2_skillq_fromscratch_r4.yaml  tb2_skillq_fromscratch_resume.yaml  tb2_skillq_full.yaml  tb2_skillq_full_v3.yaml  tb2_skillq_miniflight_10.yaml  tb2_skillq_pull_smoke.yaml  tb2_skillq_seedverify_1task.yaml  tb2_skillq_small10.yaml  tb2_skillq_small10_v2.yaml  tb2_skillq_smoke.yaml  tb2_skillq_smoke_5task.yaml  tb2_skillq_smoke_bug45.yaml  (+8 more)
experiments/full/: method_tb2_empty_lib_smoke.yaml  method_tb2_full.yaml  method_tb2_smoke_bug45.yaml
experiments/prebuild/: prebuild_images.py
experiments/run/: ablation.py  beta_sweep.py  kappa_sweep.py  run_benchmark.py  run_tb2_paper.sh  run_terminalbench.py
experiments/smoke/: _user_claude_md_stub.md  configure-git-webserver_skillq_smoke.yaml  configure-git-webserver_skillq_smoke_agentic.yaml  configure-git-webserver_skillq_smoke_hook.yaml  debug_smoke.py  fix-code-vulnerability_skillq_smoke_autoextract.yaml  fix-code-vulnerability_skillq_smoke_hook.yaml  fix-git_paper_smoke.yaml  fix-git_skillq_smoke.yaml  method.yaml  method_5task.yaml  method_5task_autoextract.yaml  method_5task_pull_smoke.yaml  method_git_smoke.yaml  method_git_smoke_agentic.yaml  method_git_smoke_hook.yaml  method_git_smoke_hook_autoextract.yaml  run_smoke.sh  seed_method_state.py
mg/: __init__.py  cli.py  env.py  prebuild_cli.py
mg/lqrl_mode/: __init__.py  cli.py  config.py  entrypoint.py
mg/method/: __init__.py  attribution.py  editor_backend.py  extractor.py  hash.py  layered_q.py  library.py  near_miss.py  prompts.py  retrieval.py  state.py  types.py  verifier.py
mg/paper_mode/: __init__.py  agent.py  bridge.py  cli.py  config.py  entrypoint.py  retrieval_step.py
mg/skillsvote_mode/: __init__.py  cli.py  config.py  entrypoint.py
paper/: __init__.py  cli.py  env.py  prebuild_cli.py
paper/method/: __init__.py  attribution.py  editor_backend.py  embedding_service.py  (+10 more)
scripts/: build_gaia_image.sh  run_gaia_10rounds.sh
skillq/: __init__.py  _resolvers.py  cli.py  config.py  env.py  prebuild_cli.py  prebuild_images.py
skillsvote/: pyproject.toml
skillsvote/src/skills_vote/: utils.py
skillsvote/src/skills_vote/evolve/: claude_code.py  codex.py  model.py  prompt.py  utils.py
skillsvote/src/skills_vote/feedback/: claude_code.py  codex.py  model.py  prompt.py  utils.py
skillsvote/src/skills_vote/harbor/: agents.py  claude_code.py  cli.py  cost.py  hooks.py
skillsvote/src/skills_vote/recommend/: claude_code.py  codex.py  model.py  prompt.py  utils.py
tests/: __init__.py  conftest.py  test_ablation_switches.py  test_agentic_search.py  test_attribution.py  test_attribution_rename.py  test_batched_extract.py  test_bridge_create_vs_edit_split.py  test_bridge_denied_skip.py  test_bridge_extract.py  test_calls_log_permission_denials.py  test_classify_trial_failure.py  test_container_wiring.py  test_container_wiring_intent_text.py  test_edit_default_model.py  test_embedding_service_ready.py  test_env_loading.py  test_env_seed_calls_log_path.py  test_extractor.py  test_extractor_failure_sections.py  test_hard_gate_strict.py  test_hook_calls_log_l1_sim.py  test_hook_env_seeding.py  test_hook_force_use_text.py  test_hook_per_trial_settings_file.py  test_hook_urllib_only.py  test_l4_edit_safety.py  test_lqrl_mode_attach.py  test_method_config_new_fields.py  test_method_dead_code_removed.py  test_paper_hooks.py  test_paper_method_layers.py  test_pipeline_emb_cache_ordering.py  test_post_trial_chown.py  test_prompt_refinements.py  test_pull_mode.py  test_q_initial.py  test_q_update_task_only.py  test_rank_numpy_float32.py  test_reuse_flags.py  (+7 more)
(+480 files in other folders)
