[project]
name = "mg"
version = "0.1.0"
description = "Branch-style entrypoint that exposes the upstream skills_vote lifecycle AND the LQRL paper's four-layer method as mutually exclusive run modes on top of Harbor."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Harbor framework — provides Job, TrialEvent, TrialHookEvent, etc.
    "harbor==0.5.0",
    # Upstream skills_vote package. The project directory is named
    # ``lqrl`` but the distribution name is ``skills_vote``. The source
    # is pulled from a local path because the package is not on PyPI.
    "skills_vote>=1.2.0,<2.0.0",
    # Single LLM backend for embedder, verifier, editor, and cost.
    "litellm>=1.40.0,<2.0.0",
    "pydantic>=2.13.3,<3.0.0",
    "omegaconf==2.3.0",
    # Used to drive the lqrl-side recommend step inside the paper agent.
    "claude-agent-sdk>=0.1.50,<0.2.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "tomlkit>=0.14.0",
]

[tool.uv.sources]
# The upstream skills_vote package is not on PyPI; pull it from the
# local checkout at /home/gonern/workspace/lqrl (whose build config
# is `[tool.uv.build-backend] module-name = "skills_vote"`).
# Override the path via UV_SKILLS_VOTE_PATH or by editing this block
# when packaging for distribution.
skills_vote = { path = "../lqrl", editable = true }

[project.scripts]
mg = "mg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mg"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["mg/tests"]
addopts = "-ra --strict-markers"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
