[project]
name = "skillq"
version = "0.1.0"
description = "Branch-style entrypoint that exposes the vendored skills_vote lifecycle AND the SkillQ paper's four-layer method as mutually exclusive run modes on top of Harbor."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Harbor framework — provides Job, TrialEvent, TrialHookEvent, etc.
    "harbor==0.5.0",
    # Vendored skills_vote package (the *comparison baseline* in the
    # SkillQ paper). Source lives in ``./skillsvote/`` (former sibling
    # at ``../lqrl``, now in-tree). Pulled editable so the
    # `skillq skillsvote` pass-through can import it directly.
    "skills_vote>=1.2.0,<2.0.0",
    # Single LLM backend for embedder, verifier, editor, and cost.
    "litellm>=1.40.0,<2.0.0",
    "pydantic>=2.13.3,<3.0.0",
    "omegaconf==2.3.0",
    # Used to drive the baseline-side recommend step inside the paper agent.
    "claude-agent-sdk>=0.1.50,<0.2.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "tomlkit>=0.14.0",
]

[tool.uv.sources]
# The skills_vote package source is vendored in-tree at
# ``./skillsvote/`` (build config: module-name = "skills_vote",
# module-root = "src"). Override the path via UV_SKILLS_VOTE_PATH
# or by editing this block when packaging for distribution.
skills_vote = { path = "./skillsvote", editable = true }

[project.scripts]
skillq = "skillq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skillq"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
