[project]
authors = [{ name = "MemTensor", email = "MemTensor@memtensor.cn" }]
dependencies = [
    "PyYAML>=6.0.3,<7.0.0",
    "claude-agent-sdk>=0.1.50,<0.2.0",
    "harbor==0.5.0",
    "omegaconf==2.3.0",
    "polars>=1.40.0,<2.0.0",
    "pydantic>=2.13.3,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "tomlkit>=0.14.0",
]
description = "SkillsVote: Lifecycle Governance of Agent Skills from Collection, Recommendation to Evolution"
license = { file = "LICENSE" }
name = "skills_vote"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
version = "1.2.0"

[project.scripts]
skillsvote = "skills_vote.harbor.cli:main"
svt = "skills_vote.harbor.cli:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.0,<0.12.0"]

[tool.uv]
python-preference = "only-managed"
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.build-backend]
module-name = "skills_vote"
module-root = "src"

[[tool.uv.index]]
explicit = true
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"

[[tool.uv.index]]
default = true
name = "pypi"
url = "https://pypi.org/simple"

[dependency-groups]
dev = [{ include-group = "format" }, { include-group = "test" }]
format = ["pre-commit", "ruff>=0.15.0,<0.16.0"]
# notebook = ["ipykernel", "ipywidgets"]
test = ["pytest>=9.0.0,<10.0.0"]

[tool.ruff]
line-length = 88
src = ["integration/skills", "scripts", "src"]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["B", "I", "SIM", "UP"]
unfixable = ["B", "SIM"]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
